--- a/test/common/secret/BUILD
+++ b/test/common/secret/BUILD
@@ -16,6 +16,7 @@ envoy_cc_test(
     ],
     deps = [
         "//source/common/secret:secret_manager_impl_lib",
+        "//test/mocks/server:server_mocks",
         "//test/test_common:environment_lib",
         "//test/test_common:registry_lib",
         "//test/test_common:utility_lib",
