Update BUILD file.
Signed-off-by: JimmyCYJ <jimmychen.0102@gmail.com>

--- a/source/common/secret/BUILD
+++ b/source/common/secret/BUILD
@@ -16,6 +16,7 @@ envoy_cc_library(
         ":sds_api_lib",
         ":secret_manager_util",
         "//include/envoy/secret:secret_manager_interface",
+        "//include/envoy/server:instance_interface",
         "//source/common/common:minimal_logger_lib",
         "//source/common/ssl:tls_certificate_config_impl_lib",
         "@envoy_api//envoy/api/v2/auth:cert_cc",
