Update dynamic secret.
Signed-off-by: JimmyCYJ <jimmychen.0102@gmail.com>

--- a/include/envoy/secret/BUILD
+++ b/include/envoy/secret/BUILD
@@ -16,3 +16,14 @@ envoy_cc_library(
         "@envoy_api//envoy/api/v2/auth:cert_cc",
     ],
 )
+
+envoy_cc_library(
+    name = "secret_manager_interface",
+    hdrs = ["secret_manager.h"],
+    deps = [
+        ":secret_callbacks_interface",
+        "//include/envoy/ssl:tls_certificate_config_interface",
+        "@envoy_api//envoy/api/v2/auth:cert_cc",
+        "@envoy_api//envoy/api/v2/core:config_source_cc",
+    ],
+)
