Add dynamic secret provider and let SDS api inherit this new class.
Signed-off-by: JimmyCYJ <jimmychen.0102@gmail.com>

--- a/source/common/secret/BUILD
+++ b/source/common/secret/BUILD
@@ -40,7 +40,9 @@ envoy_cc_library(
         ":secret_manager_util",
         "//include/envoy/config:subscription_interface",
         "//include/envoy/server:instance_interface",
+        "//source/common/common:minimal_logger_lib",
         "//source/common/config:resources_lib",
         "//source/common/config:subscription_factory_lib",
+        "//source/common/ssl:tls_certificate_config_impl_lib",
     ],
 )
