--- a/test/common/secret/BUILD
+++ b/test/common/secret/BUILD
@@ -15,6 +15,7 @@ envoy_cc_test(
         "//test/common/ssl/test_data:certs",
     ],
     deps = [
+        "//source/common/secret:sds_api_lib",
         "//source/common/secret:secret_manager_impl_lib",
         "//test/mocks/server:server_mocks",
         "//test/test_common:environment_lib",
