Add tests to context_impl_test.cc
Signed-off-by: JimmyCYJ <jimmychen.0102@gmail.com>

--- a/source/common/ssl/BUILD
+++ b/source/common/ssl/BUILD
@@ -58,6 +58,7 @@ envoy_cc_library(
     external_deps = ["ssl"],
     deps = [
         "//include/envoy/runtime:runtime_interface",
+        "//include/envoy/secret:secret_manager_interface",
         "//include/envoy/ssl:context_config_interface",
         "//include/envoy/ssl:context_interface",
         "//include/envoy/ssl:context_manager_interface",
