--- a/test/common/secret/BUILD
+++ b/test/common/secret/BUILD
@@ -37,5 +37,6 @@ envoy_cc_test(
         "//test/test_common:environment_lib",
         "//test/test_common:registry_lib",
         "//test/test_common:utility_lib",
+        "@envoy_api//envoy/service/discovery/v2:sds_cc",
     ],
 )
