--- a/source/common/upstream/BUILD
+++ b/source/common/upstream/BUILD
@@ -372,6 +372,7 @@ envoy_cc_library(
         ":outlier_detection_lib",
         ":resource_manager_lib",
         "//include/envoy/event:timer_interface",
+        "//include/envoy/init:init_interface",
         "//include/envoy/local_info:local_info_interface",
         "//include/envoy/network:dns_interface",
         "//include/envoy/runtime:runtime_interface",
@@ -388,6 +389,7 @@ envoy_cc_library(
         "//source/common/config:metadata_lib",
         "//source/common/stats:stats_lib",
         "//source/common/upstream:locality_lib",
+        "//source/server:init_manager_lib",
         "@envoy_api//envoy/api/v2/core:base_cc",
         "@envoy_api//envoy/api/v2/endpoint:endpoint_cc",
     ],
