--- a/source/common/upstream/BUILD
+++ b/source/common/upstream/BUILD
@@ -376,7 +376,6 @@ envoy_cc_library(
         "//include/envoy/local_info:local_info_interface",
         "//include/envoy/network:dns_interface",
         "//include/envoy/runtime:runtime_interface",
-        "//include/envoy/server:transport_socket_config_interface",
         "//include/envoy/ssl:context_manager_interface",
         "//include/envoy/thread_local:thread_local_interface",
         "//include/envoy/upstream:cluster_manager_interface",
@@ -390,6 +389,7 @@ envoy_cc_library(
         "//source/common/stats:stats_lib",
         "//source/common/upstream:locality_lib",
         "//source/server:init_manager_lib",
+        "//source/server:transport_socket_config_lib",
         "@envoy_api//envoy/api/v2/core:base_cc",
         "@envoy_api//envoy/api/v2/endpoint:endpoint_cc",
     ],
