--- a/source/common/ssl/BUILD
+++ b/source/common/ssl/BUILD
@@ -38,6 +38,7 @@ envoy_cc_library(
         "//include/envoy/ssl:context_config_interface",
         "//source/common/common:assert_lib",
         "//source/common/common:empty_string",
+        "//source/common/common:minimal_logger_lib",
         "//source/common/config:datasource_lib",
         "//source/common/config:tls_context_json_lib",
         "//source/common/json:json_loader_lib",
