--- a/source/common/ssl/BUILD
+++ b/source/common/ssl/BUILD
@@ -35,7 +35,6 @@ envoy_cc_library(
     ],
     deps = [
         "//include/envoy/init:init_interface",
-        "//include/envoy/secret:secret_manager_interface",
         "//include/envoy/ssl:context_config_interface",
         "//include/envoy/upstream:cluster_manager_interface",
         "//source/common/common:assert_lib",
@@ -44,7 +43,7 @@ envoy_cc_library(
         "//source/common/config:tls_context_json_lib",
         "//source/common/json:json_loader_lib",
         "//source/common/protobuf:utility_lib",
-        "//source/common/secret:sds_api_lib",
+        "//source/common/secret:secret_manager_impl_lib",
         "@envoy_api//envoy/api/v2/auth:cert_cc",
     ],
 )
