--- a/test/mocks/secret/BUILD
+++ b/test/mocks/secret/BUILD
@@ -13,6 +13,7 @@ envoy_cc_mock(
     srcs = ["mocks.cc"],
     hdrs = ["mocks.h"],
     deps = [
+        "//include/envoy/secret:dynamic_secret_provider_factory_interface",
         "//include/envoy/secret:secret_manager_interface",
         "//include/envoy/ssl:tls_certificate_config_interface",
     ],
