--- a/include/envoy/ssl/BUILD
+++ b/include/envoy/ssl/BUILD
@@ -40,3 +40,8 @@ envoy_cc_library(
     name = "tls_certificate_config_interface",
     hdrs = ["tls_certificate_config.h"],
 )
+
+envoy_cc_library(
+    name = "certificate_validation_context_config_interface",
+    hdrs = ["certificate_validation_context_config.h"],
+)
